# clovai

./: .env.example  .gitignore  .gitkeep  README.md  compose.yaml  index.html  package-lock.json  package.json  pyrightconfig.json  tailwind.config.js  vite.config.ts
admin-center/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 20260713_0001_initial_workflow_storage.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: diagrams.py  health.py  llm.py  workflows.py
backend/app/core/: env.py  llm_settings.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/models/: __init__.py  page.py  types.py  user.py  workflow.py  workspace.py
backend/app/db/repositories/: __init__.py  workflow_repository.py
backend/app/modules/diagrams/: __init__.py  flowchart_generator.py
backend/app/modules/workflows/: __init__.py  compiler.py  executor_source_generator.py  instruction_generator.py  runtime.py  schemas.py  workflow_generator.py
backend/tests/: conftest.py
backend/tests/integration/: test_health.py  test_workflows.py
backend/tests/unit/: test_executor_source_generator.py  test_instruction_generator.py  test_llm_settings.py  test_workflow_generator.py  test_workflow_runtime.py
config/: agent-workflow-library.json  footer.json  mega-menu.json  navbar.json  theme.json
src/: main.tsx  (+1 more)
(+329 files in other folders)
