[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eleven-nodes-backend"
version = "0.1.0"
description = "FastAPI backend for Eleven Nodes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "agent-framework-openai>=1.10,<2.0",
  "alembic>=1.15,<2.0",
  "fastapi>=0.115,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "python-dotenv>=1.0,<2.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<10.0",
  "ruff>=0.11,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = [
  "app",
  "packages/elevennodes/src/eleven_nodes",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "packages/elevennodes/src"]

[tool.ruff]
line-length = 100
target-version = "py311"
